--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,6 +19,7 @@ $octicons-font-path: "../bower_components/octicons/octicons";
 
 /* Space out content a bit */
 body {
+  background-color: turquoise;
   padding-top: 20px;
   padding-bottom: 20px;
 }
