--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -28,8 +28,8 @@ body {
 .header,
 .marketing,
 .footer {
-  padding-left: 15px;
-  padding-right: 15px;
+  // padding-left: 15px;
+  // padding-right: 15px;
 }
 
 /* Custom page header */
@@ -53,7 +53,7 @@ body {
 }
 
 .container-narrow > hr {
-  margin: 30px 0;
+  // margin: 30px 0;
 }
 
 /* Main marketing message and sign up button */
@@ -77,20 +77,20 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 730px;
+    // max-width: 730px;
   }
 
   /* Remove the padding we set earlier */
   .header,
   .marketing,
   .footer {
-    padding-left: 0;
-    padding-right: 0;
+    // padding-left: 0;
+    // padding-right: 0;
   }
 
   /* Space out the masthead */
   .header {
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
   }
 
   /* Remove the bottom border on the jumbotron for visual effect */
